--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="fb-root"></div>
+  <!-- <div id="fb-root"></div>
 
   <div id="fb-customer-chat"
        class="fb-customerchat">
@@ -47,7 +47,7 @@
       js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
-  </script>
+  </script> -->
 
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
